2011-04-20  Yuzhu Shen  <yzshen@chromium.org>

Reviewed by Tony Chang.

        [chromium] linux chromium doesn't set click count for mouse up events.
        https://bugs.webkit.org/show_bug.cgi?id=58921

        The reason why we need such a fix is that the Pepper API passes this information to plugins,
        and some consumers (e.g., Flash) need it to detect double-clicks.

        * src/gtk/WebInputEventFactory.cpp: set click count for mouse up events.

Canonical link: https://commits.webkit.org/74166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84427 268f45cc-cd09-0410-ab3c-d52691b4dbfc